--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
   </head>
   <body>
     <div class="container">
-      
+      <img src="./images/barry.jpg">
+      <h1 id="current-time">12:28:45</h1>
+      <div class="quotes">
+        <p>AM BARRY WEB DEVELOPER</p>
+        <h2>This website displays current time on the menu page</h2>
+      </div>
     </div>
 
   </body>
