--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1 id="current-time">12:28:45</h1>
       <div class="quotes">
         <p>AM BARRY WEB DEVELOPER</p>
-        <h2>This website displays current time on the menu page</h2>
+        <h2>This website displays current time</h2>
       </div>
     </div>
 
